<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_purple"
    tools:context=".activities.Activity_Workout_CreateEditExercise">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarActivityCreateExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/text_middle"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!-- Section title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/title_name"
            android:layout_gravity="center"
            android:textColor="@color/text_low"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_box_round_middle"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextExerciseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_enter_name_exercise"
                android:textColorHint="@color/text_low"
                android:textAlignment="center"
                android:textColor="@color/text_middle" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Section title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/workout_plans"
            android:layout_gravity="center"
            android:textColor="@color/text_low"
            android:textSize="20sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlans"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Section title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/workout_routines"
            android:layout_gravity="center"
            android:textColor="@color/text_low"
            android:textSize="20sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRoutines"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Section title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/title_details"
            android:layout_gravity="center"
            android:textColor="@color/text_low"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_box_round_middle"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sets"
                android:textColor="@color/text_middle"
                android:layout_marginStart="20dp"
                android:textAlignment="viewStart"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/editTextCreateExerciseSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textColor="@color/text_middle"
                android:textColorHint="@color/text_low"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_box_round_middle"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workout_reps"
                android:textColor="@color/text_middle"
                android:layout_marginStart="20dp"
                android:textAlignment="viewStart"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/editTextCreateExerciseRepetitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textColor="@color/text_middle"
                android:textColorHint="@color/text_low"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_box_round_middle"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workout_weight"
                android:textColor="@color/text_middle"
                android:layout_marginStart="20dp"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextCreateExerciseWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textColor="@color/text_middle"
                android:textColorHint="@color/text_low"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fadingEdge="vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelNewExercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_box_round_light"
            android:textColor="@color/text_middle"
            android:text="@string/button_text_cancel" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSaveNewExercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_box_round_light"
            android:textColor="@color/text_middle"
            android:text="@string/button_text_save" />

    </LinearLayout>

</LinearLayout>