<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Activity_Workout_EditRoutines"
    android:background="@color/dark_purple">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarActivityEditRoutines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/text_middle"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Section title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_select_plan"
        android:textColor="@color/text_low"
        android:textSize="20sp"/>

    <!-- Spinner "Workout plans" -->
    <LinearLayout
        android:id="@+id/layoutSpinnerWorkoutPlans"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_box_round_middle"
        android:gravity="center">

        <Spinner
            android:id="@+id/spinnerWorkoutRoutines"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:tooltipText="Select workout plan"/>

    </LinearLayout>


    <!-- Section title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/workout_routines"
        android:textColor="@color/text_low"
        android:textSize="20dp"/>

    <!-- Spinner "Routines" -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRoutines"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSpinnerWorkoutPlans"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateRoutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_box_round_light"
        android:textColor="@color/text_middle"
        android:text="@string/button_add_routine" />

</LinearLayout>