<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_purple"
    tools:context=".fragments.Fragment_Workout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_box_round_bottom_middle"
            android:gravity="center">

            <Spinner
                android:id="@+id/spinnerWorkoutPlans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:tooltipText="Select workout plan"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <!-- Section title -->
        <TextView
            android:id="@+id/sectionTitleRoutines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/workout_routines"
            android:layout_gravity="center"
            android:textColor="@color/text_low"
            android:textSize="20sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRoutines"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <!-- Section title -->
        <TextView
            android:id="@+id/sectionTitleExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/workout_exercises"
            android:layout_gravity="center"
            android:textColor="@color/text_low"
            android:textSize="20sp"/>

        <!-- Recycler view -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewExercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </LinearLayout>

    <!-- Background blur -->
    <View
        android:id="@+id/fragmentExercisesBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC1A2237"
        android:visibility="gone"/>

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExercisesMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:maxImageSize="66dp"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:tint="@color/text_low"
        android:backgroundTint="#00FFFFFF"/>

    <LinearLayout
        android:id="@+id/linearLayoutFAB01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_exercises"
            android:textSize="20sp"
            android:textColor="@color/text_high"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabExercises01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:maxImageSize="66dp"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:tint="@color/text_low"
            android:visibility="visible"
            android:backgroundTint="#00FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFAB02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_routines"
            android:textSize="20sp"
            android:textColor="@color/text_high"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabExercises02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:maxImageSize="66dp"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:tint="@color/text_low"
            android:visibility="visible"
            android:backgroundTint="#00FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFAB03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_plans"
            android:textSize="20sp"
            android:textColor="@color/text_high"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabExercises03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:maxImageSize="66dp"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:tint="@color/text_low"
            android:visibility="visible"
            android:backgroundTint="#00FFFFFF"/>

    </LinearLayout>

</FrameLayout>