<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_Meals_AddDailyEntry"
    android:orientation="vertical"
    android:background="@color/dark_purple">

    <!-- Main Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarActivityAddMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@color/text_middle"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:text="Today"
                android:textAlignment="textEnd"
                android:textColor="@color/text_low"
                android:textSize="20sp"/>

        </androidx.appcompat.widget.Toolbar>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Spinner
            android:id="@+id/spinnerMealPresetCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:tooltipText="Select workout plan"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMealsPreset"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginStart="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_box_round_light"
            android:text="@string/button_text_create_meal"
            android:textColor="@color/text_middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddMealCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_box_round_light"
                android:textColor="@color/text_middle"
                android:text="@string/button_text_cancel" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddMealSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_box_round_light"
                android:textColor="@color/text_middle"
                android:text="@string/button_text_save" />

        </LinearLayout>

    </LinearLayout>

    <!-- Overlay text view -->
    <TextView
        android:id="@+id/textViewNoEntries"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="No entries found"
        android:textSize="20sp"
        android:textColor="@color/text_middle"/>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:visibility="visible">

        <TextView
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Loading..."
            android:textSize="20sp"
            android:textColor="@color/text_middle"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:visibility="visible" />

    </FrameLayout>

</FrameLayout>